--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "react-use-localstorage": "^3.5.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
