--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-localstorage": "^3.5.3",
     "web-vitals": "^1.0.1"
